src/objects/Maize_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Proper_Planting__c</fullName>
        <description>Proper planting (recommended spacing and seed rate)</description>
        <inlineHelpText>Proper planting (recommended spacing and seed rate)</inlineHelpText>
        <label>Proper Planting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proper_Seed_Selection__c</fullName>
        <label>Proper Seed Selection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proper_and_timely_land_preparation__c</fullName>
        <label>Proper and timely land preparation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_insufficient_fertilizer__c</fullName>
        <description>Why were you not able to use a sufficient amount of fertilizer on your maize garden (s)?</description>
        <inlineHelpText>Why were you not able to use a sufficient amount of fertilizer on your maize garden (s)?</inlineHelpText>
        <label>Reason for insufficient fertilizer</label>
        <picklist>
            <picklistValues>
                <fullName>Did not know how much to apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer destroyed before application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required amount not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_insufficient_herbicide_amount__c</fullName>
        <description>Why were you not able to use a sufficient amount of herbicide?</description>
        <inlineHelpText>Why were you not able to use a sufficient amount of herbicide?</inlineHelpText>
        <label>Reason for insufficient herbicide amount</label>
        <picklist>
            <picklistValues>
                <fullName>Do not know how to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot afford to/insufficient funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required amount not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_insufficient_pesticides__c</fullName>
        <description>Why were you not able to use a sufficient amount of chemicals (pesticides/fungicides)?</description>
        <inlineHelpText>Why were you not able to use a sufficient amount of chemicals (pesticides/fungicides)?</inlineHelpText>
        <label>Reason for insufficient pesticides</label>
        <picklist>
            <picklistValues>
                <fullName>Did not know how much to apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required amount not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_non_engagement_in_maize_group__c</fullName>
        <description>Why are you not engaged in group production, bulking and marketing of maize</description>
        <inlineHelpText>Why are you not engaged in group production, bulking and marketing of maize</inlineHelpText>
        <label>Reason for non-engagement in maize group</label>
        <picklist>
            <picklistValues>
                <fullName>Lack of information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groups not willing to engage in this</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fear to be cheated in a group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takes time to get money from maize sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groups not sustainable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_applying_fertilizer__c</fullName>
        <description>Why didn&apos;t you applly fertilizer or manure on your maize garden (s) last season?</description>
        <inlineHelpText>Why didn&apos;t you applly fertilizer or manure on your maize garden (s) last season?</inlineHelpText>
        <label>Reason for not applying fertilizer</label>
        <picklist>
            <picklistValues>
                <fullName>Do not know how to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot afford to/insufficient funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply  it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer or manure not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer not available when needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Received_fertilizer_application_training__c</fullName>
        <description>Have you ever received training in the proper way to apply fertilizer on your maize garden[s]?</description>
        <inlineHelpText>Have you ever received training in the proper way to apply fertilizer on your maize garden[s]?</inlineHelpText>
        <label>Received fertilizer application training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Farm_Practices_Info_Sources__c</fullName>
        <description>If yes, where do you get information on recommended farming practices</description>
        <inlineHelpText>If yes, where do you get information on recommended farming practices</inlineHelpText>
        <label>Recommended Farm Practices Info Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension agents (NAADS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NGOs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Practices_done_on_garden__c</fullName>
        <description>What recommended practices do you practice on your maize gardens</description>
        <inlineHelpText>What recommended practices do you practice on your maize gardens</inlineHelpText>
        <label>Recommended Practices done on garden</label>
        <picklist>
            <picklistValues>
                <fullName>Planting in rows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planting the right amount &amp; good seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting and post-harvest handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Record_keeping__c</fullName>
        <label>Proper record keeping</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Records_kept_on_maize__c</fullName>
        <description>What kind of records do you keep on maize</description>
        <inlineHelpText>What kind of records do you keep on maize</inlineHelpText>
        <label>Records kept on maize</label>
        <picklist>
            <picklistValues>
                <fullName>Production records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm planning records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Maize Farmers</relationshipLabel>
        <relationshipName>Maize_Farmers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Secondary_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is for those farmers whose initial farmer reg form did not have a gps record</description>
        <inlineHelpText>This is for those farmers whose initial farmer reg form did not have a gps record</inlineHelpText>
        <label>Secondary Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Maize Farmers (Secondary Submission)</relationshipLabel>
        <relationshipName>Maize_Farmers_Without_GPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seed_selection_method__c</fullName>
        <description>How do you select the seed to plant the following season?</description>
        <inlineHelpText>How do you select the seed to plant the following season?</inlineHelpText>
        <label>Seed selection method</label>
        <picklist>
            <picklistValues>
                <fullName>Mark healthy cobs from garden, harvest and dry them separately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just harvest healthy cobs and dry them separately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just pick and plant any seed from the bulky harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility__c</fullName>
        <label>Proper Soil Fertility Management</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the submission object, to be used to extract gps coordinates via formula fields</description>
        <inlineHelpText>Look up to the submission object, to be used to extract gps coordinates via formula fields</inlineHelpText>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Maize Farmers</relationshipLabel>
        <relationshipName>Maize_Farmers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sufficient_Amount_of_Pesticides_used__c</fullName>
        <description>In the last 12 months, was the amount of pesticides that you used sufficient for your maize farm needs?</description>
        <inlineHelpText>In the last 12 months, was the amount of pesticides that you used sufficient for your maize farm needs?</inlineHelpText>
        <label>Sufficient Amount of Pesticides used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sufficient_Herbicides_last_season__c</fullName>
        <description>Last season, was the amount of herbicide(s) that you used sufficient for your maize garden (s) needs?</description>
        <inlineHelpText>Last season, was the amount of herbicide(s) that you used sufficient for your maize garden (s) needs?</inlineHelpText>
        <label>Sufficient Herbicides last season?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sufficient_amount_of_fertilizer_used__c</fullName>
        <description>Last season, was the amount of fertilizer(s) that you used sufficient for your maize garden (s) needs?</description>
        <inlineHelpText>Last season, was the amount of fertilizer(s) that you used sufficient for your maize garden (s) needs?</inlineHelpText>
        <label>Sufficient amount of fertilizer used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_of_free_agro_chemicals__c</fullName>
        <description>If given for free, from who or which organisation</description>
        <inlineHelpText>If given for free, from who or which organisation</inlineHelpText>
        <label>Supplier of free agro-chemicals</label>
        <picklist>
            <picklistValues>
                <fullName>From NGOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer group or association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government agencies (NAADs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppliers_of_Agro_Chemicals_On_Credit__c</fullName>
        <description>If got on credit, from who or which organsation</description>
        <inlineHelpText>If got on credit, from who or which organsation</inlineHelpText>
        <label>Suppliers of Agro-Chemicals On Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Contract farming (for a maize company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agro-input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Village saving and Loan Association (VSLA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thinning_Stage__c</fullName>
        <description>At what stage of maize was thinning (removal of excess of maize plants) done</description>
        <inlineHelpText>At what stage of maize was thinning (removal of excess of maize plants) done</inlineHelpText>
        <label>Thinning Stage</label>
        <picklist>
            <picklistValues>
                <fullName>One week after germination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two weeks after germination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three weeks after germination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four weeks after germination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thinning_done__c</fullName>
        <description>Did you carry out thinning (removal of excess of maize plants) in your maize garden</description>
        <inlineHelpText>Did you carry out thinning (removal of excess of maize plants) in your maize garden</inlineHelpText>
        <label>Thinning done?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_3_cash_crops_other_than_maize__c</fullName>
        <description>What are the top 3 cash crops that your household earn income from other than maize?</description>
        <inlineHelpText>What are the top 3 cash crops that your household earn income from other than maize?</inlineHelpText>
        <label>Top 3 cash crops other than maize</label>
        <picklist>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables (tomato, cabage etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Top_3_livestock_that_bring_income__c</fullName>
        <description>What are the top 3 livestock that your household earn income from?</description>
        <inlineHelpText>What are the top 3 livestock that your household earn income from?</inlineHelpText>
        <label>Top 3 livestock that bring income</label>
        <picklist>
            <picklistValues>
                <fullName>Cattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poutlry (chicken, ducks, turkeys etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_in_UGX_spent_on_fertilizer__c</fullName>
        <description>Last season, what was the total amount you spent in Ugandan shillings for the fertilizers used on your maize garden[s]?</description>
        <inlineHelpText>Last season, what was the total amount you spent in Ugandan shillings for the fertilizers used on your maize garden[s]?</inlineHelpText>
        <label>Total Amount in UGX spent on fertilizer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_fertilizer_used_last_season__c</fullName>
        <description>Which type of fertilizer or manure did you use on your maize garden (s) last season?</description>
        <inlineHelpText>Which type of fertilizer or manure did you use on your maize garden (s) last season?</inlineHelpText>
        <label>Type of fertilizer used last season</label>
        <picklist>
            <picklistValues>
                <fullName>Manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both manure and inorganic/chemical fertilizer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Types_of_Inorganic_Fertilizers_Used__c</fullName>
        <description>If inorganic fertilizers, what types do you use</description>
        <inlineHelpText>If inorganic fertilizers, what types do you use</inlineHelpText>
        <label>Types of Inorganic Fertilizers Used</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super gro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Updated_GPS_Latitude__c</fullName>
        <formula>Secondary_Submission__r.gfsurveys__gps_x__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated GPS Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_GPS_Longitude__c</fullName>
        <formula>Secondary_Submission__r.gfsurveys__gps_y__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated GPS Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Useful_farming_info_from_GF_call_center__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the GF farmer call center</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the GF farmer call center</inlineHelpText>
        <label>Useful farming info from GF call center</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Useful_farming_info_from_farmer_groups__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Farmer Group or Association?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Farmer Group or Association?</inlineHelpText>
        <label>Useful farming info from farmer groups</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uses_production_and_marketing_records__c</fullName>
        <description>Do you use maize production and marketing records to make informed decisions</description>
        <inlineHelpText>Do you use maize production and marketing records to make informed decisions</inlineHelpText>
        <label>Uses production and marketing records</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uses_protective_gear_applying_herbicides__c</fullName>
        <description>Do you use protective gear (e.g. gumboots, masks, gloves, glasses etc.) while applying herbicides</description>
        <inlineHelpText>Do you use protective gear (e.g. gumboots, masks, gloves, glasses etc.) while applying herbicides</inlineHelpText>
        <label>Uses protective gear applying herbicides</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_addition_done_on_maize__c</fullName>
        <description>What form of value addition do you do on your maize</description>
        <inlineHelpText>What form of value addition do you do on your maize</inlineHelpText>
        <label>Value addition done on maize</label>
        <picklist>
            <picklistValues>
                <fullName>Brewing (Kwete)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Popcorn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Weeding_frequency_last_season__c</fullName>
        <description>How many times do you weed your Maize plantation last season</description>
        <inlineHelpText>How many times do you weed your Maize plantation last season</inlineHelpText>
        <label>Weeding frequency last season</label>
        <picklist>
            <picklistValues>
                <fullName>Once a season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_is_land_preparation_normally_done__c</fullName>
        <description>When is land preparation normally done</description>
        <inlineHelpText>When is land preparation normally done</inlineHelpText>
        <label>When is land preparation normally done</label>
        <picklist>
            <picklistValues>
                <fullName>At the end of the first rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At the on set of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 weeks before onset of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One month before onset of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two months before onset of rains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Which_requirements_do_buyers_emphasize__c</fullName>
        <description>If yes, what are some of the requirements and standards that traders/buyers emphasize</description>
        <inlineHelpText>If yes, what are some of the requirements and standards that traders/buyers emphasize</inlineHelpText>
        <label>Which requirements do buyers emphasize</label>
        <picklist>
            <picklistValues>
                <fullName>Maize dried to a certain moisture level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize should be clean with healthy grain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize grains should be of uniform size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Who_buys_most_of_your_maize__c</fullName>
        <description>Who buys most of your maize</description>
        <inlineHelpText>Who buys most of your maize</inlineHelpText>
        <label>Who buys most of your maize</label>
        <picklist>
            <picklistValues>
                <fullName>Maize cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traders/middle men</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Would_like_to_receive_SMS_alerts__c</fullName>
        <description>Would you like to received free SMS alerts on the selected practices such as market prices and farming tips</description>
        <inlineHelpText>Would you like to received free SMS alerts on the selected practices such as market prices and farming tips</inlineHelpText>
        <label>Would like to receive SMS alerts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>